# docs-mcp

./: .env.example  .gitignore  AGENTIC_FLOW_ARCHITECTURE.md  AGENTIC_IMPLEMENTATION_AUDIT.md  AGENTIC_IMPLEMENTATION_ROADMAP.md  Cargo.toml  DOCUMENTATION_VERSIONING_SUMMARY.md  OLLAMA_INTEGRATION.md  README.md  WEB_SEARCH_FILE_OPS_SUMMARY.md  docs.db-journal  tsconfig.json
docs/: AGENTIC_IMPLEMENTATION_COMPLETE.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MODEL_DISCOVERY_IMPLEMENTATION_SUMMARY.md  OLLAMA_COPILOT_ENHANCEMENTS.md  QUICK_START_GUIDE.md  usage-overview.md
examples/: code_analysis_example.rs  comprehensive_model_evaluation_demo.rs  copilot-config-production.json  copilot-config.json  model_discovery_integration.rs  test-enhanced-features.py  test-live-ai.py  test-model-discovery.sh  test-phase2-ai.py  test-version-system.sh  test_db.rs
migrations/: 001_initial.sql  002_advanced_features.sql
src/: ai_integration.rs  cache.rs  chat_interface.rs  database.rs  embeddings.rs  enhanced_search.rs  fetcher.rs  file_manager.rs  http_server.rs  learning.rs  lib.rs  main.rs  ranking.rs  scheduler.rs  server.rs  web_search.rs
src/agents/: code_analyzer.rs  context_manager.rs  coordinator.rs  doc_generator.rs  embedder.rs  mod.rs  model_selector.rs  performance_analyzer.rs  security_auditor.rs  test_generator.rs
src/model_clients/: mod.rs  ollama_client.rs
src/model_discovery/: database.rs  evaluator.rs  mod.rs  ollama_provider.rs  scheduler.rs
src/orchestrator/: mod.rs  model_router.rs
static/: index.html
